scss/chat/_chat-list.scss
.chat-list {
  z-index: $z-index-new-local-scope; // needed for .floating-action-button
  width: 30%;
  min-width: 295px; /* don't forget to update navbar, .bp4-align-left */
  height: 100%;
  overflow-y: auto;
  box-shadow:
    0 0 4px 1px rgba(16, 22, 26, 0.1),
    0 0 0 rgba(16, 22, 26, 0),
    0 1px 1px rgba(16, 22, 26, 0.2);
  user-select: none;

  .search-result-divider {
    line-height: 43px;
    height: 40px;
    padding-left: 15px;
    font-weight: 200;
    color: var(--globaltext);
    background: var(--cli-search-result-divider);
    border-bottom: var(--cli-search-result-divider-border-width) solid
      var(--cli-search-result-divider-border);
  }

  .search-in-chat-label {
    display: flex;
    height: 64px;
    flex-direction: row;
    padding: 0px 10px;
    align-items: center;

    .chat-name {
      flex-grow: 1;
      vertical-align: baseline;
      line-height: 18px;
      overflow-x: hidden;
      overflow-y: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      font-weight: 200;
      font-size: medium;
      margin-left: 10px;
    }
  }
}

